--- a/src/main/resources/jdbc.properties
+++ b/src/main/resources/jdbc.properties
@@ -1,11 +1,12 @@
 #oracle10g
 jdbc.driverClassName=oracle.jdbc.driver.OracleDriver
 
-jdbc.url=jdbc:oracle:thin:@192.168.1.201:1521:wheams
-jdbc.username=docms
-jdbc.password=docms
+#jdbc.url=jdbc:oracle:thin:@192.168.1.201:1521:wheams
+jdbc.url=jdbc:oracle:thin:@127.0.0.1:1521:orcl
+jdbc.username=eams
+jdbc.password=eams
 
-hibernate.default_schema=docms
+hibernate.default_schema=eams
 hibernate.show_sql=true
 javax.persistence.validation.mode=none
 hibernate.dialect=org.hibernate.dialect.Oracle10gDialect
