--- a/pom.xml
+++ b/pom.xml
@@ -197,4 +197,18 @@
 		    <version>1.1.2</version>
 		</dependency>
 	</dependencies>
+	<build>  
+	    <plugins>  
+	        <plugin>  
+	            <groupId>org.apache.maven.plugins</groupId>  
+	            <artifactId>maven-compiler-plugin</artifactId>  
+	            <version>3.3</version>  
+	            <configuration>  
+	                <!-- 指定source和target的版本 -->                 
+	                <source>1.6</source>  
+	                <target>1.6</target>  
+	            </configuration>  
+	        </plugin>  
+	    </plugins>  
+	</build>
 </project>
