--- a/.settings/org.eclipse.core.resources.prefs
+++ b/.settings/org.eclipse.core.resources.prefs
@@ -1,2 +1,3 @@
 eclipse.preferences.version=1
+encoding//src/main/resources/app-constant.properties=UTF-8
 encoding//src/main/resources/fdfs_client.properties=UTF-8
