--- a/pom.xml
+++ b/pom.xml
@@ -196,6 +196,11 @@
 		    <artifactId>standard</artifactId>
 		    <version>1.1.2</version>
 		</dependency>
+		<dependency>  
+		   <groupId>com.oracle</groupId>  
+		   <artifactId>ojdbc6</artifactId>  
+		   <version>11.2.0.1.0</version>  
+		</dependency>
 	</dependencies>
 	<build>  
 	    <plugins>  
