--- a/src/main/resources/jdbc.properties
+++ b/src/main/resources/jdbc.properties
@@ -2,11 +2,11 @@
 jdbc.driverClassName=oracle.jdbc.driver.OracleDriver
 
 #jdbc.url=jdbc:oracle:thin:@192.168.1.201:1521:wheams
-jdbc.url=jdbc:oracle:thin:@127.0.0.1:1521:orcl
-jdbc.username=eams
-jdbc.password=eams
+jdbc.url=jdbc:oracle:thin:@127.0.0.1:1521:htdemo
+jdbc.username=resarv
+jdbc.password=resarv
 
-hibernate.default_schema=eams
+hibernate.default_schema=resarv
 hibernate.show_sql=true
 javax.persistence.validation.mode=none
 hibernate.dialect=org.hibernate.dialect.Oracle10gDialect
