--- a/src/main/resources/jdbc.properties
+++ b/src/main/resources/jdbc.properties
@@ -1,8 +1,7 @@
 #oracle10g
 jdbc.driverClassName=oracle.jdbc.driver.OracleDriver
 
-#jdbc.url=jdbc:oracle:thin:@192.168.1.201:1521:wheams
-jdbc.url=jdbc:oracle:thin:@127.0.0.1:1521:htdemo
+jdbc.url=jdbc:oracle:thin:@192.168.1.201:1521:wheams
 jdbc.username=resarv
 jdbc.password=resarv
 
